<resources>
    <string name="app_name">Rutilahu App</string>
    <string name="access_token">pk.eyJ1IjoibGloYXRtYXAiLCJhIjoiY2poejN3MmJ0MHRmczNrcW5yOHBnOG03YyJ9.l7_aQdxiep-RYYYDLZj7bw</string>
    <string name="title_list">Data</string>
    <string name="title_map">Peta</string>
    <string name="title_account">Akun</string>
    <string name="title_back">Kembali</string>
    <string name="title_refresh">Reset</string>
    <string name="title_submit">Kirim</string>
    <string name="title_dukung">Validitas</string>
    <string name="title_edit">Edit</string>
    <string name="menu_pilihlokasi">Pilih Lokasi</string>
    <string name="menu_lokasisaya">Lokasi Saya</string>
    <string name="menu_radius">Radius (Km) :</string>
    <string name="menu_hint00">00</string>
    <string name="menu_radius25">2.5</string>
    <string name="menu_tampilkan">Tampilkan</string>
    <string name="menu_simpandata">Simpan Data</string>
    <string name="menu_geserpeta">Geser Peta untuk Memilih Lokasi</string>
    <string name="swipe_up"> </string>
    <string name="map_type">MAP TYPE</string>
    <string name="layer">LAYER</string>
    <string name="basic">Basic</string>
    <string name="traffic">Traffic</string>
    <string name="outdoor">Outdoor</string>
    <string name="night">Night</string>
    <string name="sattelite">Satellite</string>
    <string name="street">Street</string>
    <string name="rtlh">RTLH</string>
    <string name="batasadmin">Batas Wilayah</string>
    <string name="dot">…</string>
    <string name="tambah_data">TAMBAH DATA</string>
    <string name="version">Abdimas Version : 0.0901</string>
    <string name="subtitle">Aplikasi Pemetaan Partisipatif\n
        Rumah Tidak Layak Huni</string>
    <string name="user_location_permission_explanation">Meminta Akses Lokasi</string>
    <string name="user_location_permission_not_granted">Akses Lokasi Tidak Diberikan</string>
    <string name="title_activity_rtlhsubmit">Tambah Data RTLH</string>
    <string name="account_angkatsurv"><u>Angkat Surveyor</u></string>
    <string name="account_surveyordesc">*Ketikkan Nama Pengguna yang ingin diangkat menjadi Surveyor. Jika Pengguna yang diangkat lebih dari 1, gunakan tanda koma (,) sebagai pemisah (tanpa tanda spasi).\n*Nama Kegiatan Maksimal 25 Karakter</string>
    <string name="account_angkat">Angkat</string>
    <string name="account_namakegiatan">Nama Kegiatan : </string>
    <string name="account_namakegiatanhint">Contoh : Update Data RTLH 2019</string>
    <string name="account_angkathint">Contoh : Raden,Agus45,jefri</string>
    <string name="account_bataswaktu">Batas Waktu (Maksimum 30 Hari) : </string>
    <string name="text_tanggal">TANGGAL</string>
    <string name="text_tentang">Tentang</string>
    <string name="text_tutorial">Tutorial</string>
    <string name="text_tentangApps">Tentang Aplikasi</string>
    <string name="text_tentangAppsIsi">Aplikasi yang dikhususkan untuk Pendataan Rumah Tidak Layak Huni (RTLH) dengan sistem Pemetaan Partisipatif, sehingga siapa pun dapat menambahkan dan mengedit data. \n
        Petunjuk Penggunaan Aplikasi dapat dilihat melalui link di bawah ini:</string>
    <string name="text_apaItu">Apa itu RTLH?</string>
    <string name="text_apaItuIsi">Menurut Permenpera Tahun 2008, Rumah Tidak Layak Huni (RTLH) adalah rumah yang tidak memenuhi persyaratan keselamatan bangunan, kecukupan minimum luas bangunan, serta kesehatan penghuninya. \n
    Kriteria Rumah Layak Huni harus memenuhi persyaratan-persyaratan berikut, yakni : \n
         a) Keselamatan bangunan meliputi : Struktur Bawah/Pondasi;  Struktur Tengah/Kolom dan Balok dan Struktur Atas.  \n
         b) Kesehatan meliputi pencahayaan, penghawaan, dan sanitasi. \n
         c) Kecukupan luas minimum 7,2 m²  - 12 m² /orang. \n
        Modul Pendataan RTLH dapat dilihat melalui link :
    </string>
    <string name="text_termsofuse">Ketentuan Penggunaan</string>
    <string name="text_termsofuseIsi">Dengan mengunduh, menginstal, dan menggunakan aplikasi ini, Anda setuju bahwa Anda telah membaca, memahami, menerima, dan menyetujui *Ketentuan Penggunaan* ini.
        Ketentuan penggunaan ini merupakan suatu perjanjian yang sah antara Anda dan Pengembang Aplikasi ini. Silahkan membatalkan Akun Anda dan secara permanen menghapus aplikasi dari perangkat Anda jika Anda tidak setuju pada Ketentuan Penggunaan ini. \n
        \n
        1. Aplikasi ini memungkinkan Anda untuk pemetaan RTLH secara partisipatif. Sehingga aplikasi ini akan memendeteksi lokasi perangkat Anda menggunakan GPS yang ada pada perangkat Anda. \n
        2. Anda hanya dapat menggunakan aplikasi jika Anda sudah mendaftar melalui aplikasi. \n
        3. Pengguna wajib memberikan informasi yang benar mengenai data RTLH yang dikumpulkan. \n
        4. Anda berjanji untuk menggunakan aplikasi ini sebaik-baiknya dan tidak akan menyalahgunakan atau menggunakan aplikasi untuk kepentingan yang melanggar hukum. \n
        5. Anda tidak diperkenankan untuk membahayakan, mengubah, atau memodifikasi aplikasi dengan cara apapun. \n
        6. Pengembang tidak bertanggung jawab jika ada informasi yang tidak benar yang Anda dapatkan melalui aplikasi ini. \n
        7. Pengembang akan berupaya semaksimal mungkin untuk memberikan layanan terbaik melalui aplikasi ini.

    </string>
    <string name="text_privacypolicy">Kebijakan Privasi</string>
    <string name="text_privacypolicyIsi">Kebijakan Privasi berikut ini menjelaskan bagaimana Aplikasi ini mengumpulkan, menyimpan, menggunakan, menguasai, mengungkapkan, dan melindungi informasi pribadi Anda. \n
        \n
        Mohon baca Kebijakan Privasi ini dengan seksama untuk memastikan bahwa Anda memahami bagaimana proses pengolahan data pribadi Anda. \n
        \n
        1. Aplikasi ini mengumpulkan informasi yang mengidentifikasi dan dapat digunakan untuk menghubungi Anda. Informasi tersebut tidak terbatas pada nama, email, alamat, lokasi, dan lain sebagainya. \n
        2. Informasi yang dikumpulkan bisa langsung dari Anda atau Perangkat seluler Anda. Ketika Anda mendaftar dan membuat akun menggunakan aplikasi ini, Anda harus memberikan informasi pribadi tertentu, termasuk alamat email dan nama. \n
        3. Setiap kali Anda menggunakan aplikasi, aplikasi akan mengumpulkan data teknis termasuk akses terakhir Anda dan lokasi Perangkat Anda. Dalam beberapa kasus, Anda diminta untuk mengaktifkan GPS pada perangkat Anda. \n
        4. Informasi pribadi Anda yang dikumpulkan dapat digunakan untuk dengan tujuan memverifikasi, menonaktifkan, atau mengelola akun Anda, serta untuk mengirim pemberitahuan terkait melalui alamat email Anda. \n
        5. Kerahasiaan informasi pribadi Anda akan dijaga dari ancaman orang-orang yang tidak berwenang. \n
        6. Informasi lainnya mengenai data RTLH yang Anda kumpulkan dapat digunakan oleh siapa pun dan dimana pun untuk kepentingan tertentu. \n
        7. Kebijakan Privasi ini dapat berubah sewaktu-waktu. \n
        8. Dengan menyetujui Kebijakan Privasi, Anda mengakui bahwa Anda telah membaca, memahami, dan menyetujui Kebijakan Privasi ini.
    </string>
    <string name="text_copyright">Hak Cipta</string>
    <string name="text_copyrightIsi">Aplikasi ini dibuat untuk memenuhi Mata Kuliah GDA-500 Tugas Akhir, Jurusan Teknik Geodesi Itenas. \n
        Aplikasi ini diharapkan dapat memberikan manfaat kepada masyarakat, di antaranya seperti : \n
        \t * Menyediakan aplikasi android untuk pemetaan partisipatif, khususnya dalam pendataan RTLH;  \n
        \t * Data RTLH yang dikumpulkan dapat digunakan sebagai acuan oleh pemerintah maupun pihak swasta untuk meningkatkan kualitas pada rumah-rumah yang tidak layak huni;  \n
        \t * Meningkatkan inisiatif masyarakat untuk ikut serta dalam kegiatan pemetaan partisipatif, terutama dalam masalah sosial pendataan rumah tidak layak huni.  \n
        \n
        Aplikasi ini dibuat dengan menggunakan perangkat lunak Android Studio, dengan Peta Dasar dan API yang digunakan dari layanan Mapbox, serta Layanan 000WebHost untuk membuat aplikasi ini dapat berjalan secara online.  \n
        *Versi Aplikasi : 0.0901 \n
        *Pembaharuan Terakhir : 1 September 2019 \n
        *Email :
    </string>
    <string name="text_emaildeveloper"><u>alfadila.anas@mhs.itenas.ac.id</u></string>
    <string name="text_ITENAS">
        JURUSAN TEKNIK GEODESI \n
        FAKULTAS TEKNIK SIPIL DAN PERENCANAAN \n
        INSTITUT TEKNOLOGI NASIONAL \n
        BANDUNG \n
        2019
    </string>
    <string name="text_kontribusi">Kontribusi :</string>
    <string name="tutor_BtnModul">Modul</string>
    <string name="tutor_LinkModul">https://s.id/ModulRTLH</string>
    <string name="LinkModul"><u>https://s.id/ModulRTLH</u></string>
    <string name="tutor_BtnUserManual">User Manual</string>
    <string name="link_usermanual"><u>https://s.id/RutilahuAppUserManual</u></string>
    <string name="tutor_Welcome">Selamat Datang</string>
    <string name="tutor_WelcomeIsi">Aplikasi ini merupakan aplikasi Pendataan Rumah Tidak Layak Huni (RTLH) berbasis Pemetaan Partisipatif \n
        ##### APA ITU RTLH? ##### \n
        Menurut Kementerian Pekerjaan Umum dan Perumahan Rakyat (KemenPUPR), Rumah Tidak Layak Huni (RTLH) adalah rumah yang tidak memenuhi persyaratan keselamatan bangunan, kecukupan minimum luas bangunan, serta kesehatan penghuninya. \n
        \n
        Untuk lebih lengkapnya, Modul Pendataan RTLH yang dikeluarkan oleh KemenPUPR dapat dilihat melalui tombol di bawah ini:
    </string>
    <string name="text_ratingApps">Beri Rating pada Aplikasi</string>
    <string name="text_rating">Beri Rating</string>
    <string name="text_ratingPerangkat">Tipe Smartphone Anda (Wajib diisi)</string>
    <string name="text_ratingKuesioner">Kuesioner</string>
    <string name="text_ratingSaran">Berikan Saran (Opsional)</string>
    <string name="text_ratingLapor">Laporkan Error dan Bug (Opsional)</string>
    <string name="text_ratingPendapat">Berikan Pendapat Anda (Wajib diisi)</string>
    <string name="text_ratingPetunjuk">* Petunjuk Mengisi Kuesioner :</string>
    <string name="text_rating1"># Sangat Kurang = 1</string>
    <string name="text_rating2"># Kurang = 2</string>
    <string name="text_rating3"># Cukup = 3</string>
    <string name="text_rating4"># Baik = 4</string>
    <string name="text_rating5"># Sangat Baik = 5</string>
    <string name="text_no1">1</string>
    <string name="text_no2">2</string>
    <string name="text_no3">3</string>
    <string name="text_no4">4</string>
    <string name="text_no5">5</string>
    <string name="text_RQ1">1.	Apakah aplikasi ini sudah sesuai dengan kebutuhan Anda?</string>
    <string name="text_RQ2">2.	Dengan adanya aplikasi ini, apakah mempermudah Anda dalam Pendataan RTLH?</string>
    <string name="text_RQ3">3.	Apakah aplikasi ini bekerja sesuai dengan fungsinya?</string>
    <string name="text_RQ4">4.	Apakah aplikasi ini dapat diakses dengan baik menggunakan smartphone yang Anda miliki?</string>
    <string name="text_RQ5">5.	Menurut Anda, apakah prosedur Pendataan RTLH dengan tampilan peta dibutuhkan oleh masyarakat umum?</string>
    <string name="text_dukungan_masyarakat">VALIDITAS DATA</string>
    <string name="text_valid">VALID</string>
    <string name="text_dukung">DUKUNG</string>
    <string name="text_tolak">TOLAK</string>
    <string name="text_dukungan">Dukungan :</string>
    <string name="text_validasi">Validasi :</string>
    <string name="text_penolakan">Penolakan :</string>
    <string name="text_dukungananda">Berikan Dukungan Anda</string>
    <string name="text_dukungan_nodata">*Belum Ada Dukungan</string>
    <string name="text_mengirim_data">Mengirim Data…</string>
    <string name="text_mengunggah_gambar">Mengunggah Gambar : …</string>
    <string name="text_mengunggah_data">Mengunggah Data : …</string>
    <string name="text_menyimpan_data">Menyimpan Data : …</string>
</resources>