<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentSoft">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:contentDescription="@string/app_name"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:scaleType="center"
                    android:text="@string/text_dukungan_masyarakat"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccentLight"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textDukungan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_dukungan"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textValidasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_validasi"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textPenolakan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_penolakan"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBarDukungan"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:visibility="visible"
                tools:layout_editor_absoluteX="363dp"
                tools:layout_editor_absoluteY="683dp"
                tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/textDukunganNoData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:text="@string/text_dukungan_nodata"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerDukungan"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/text_dukungananda"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioDukungan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccentLight"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_weight="1"
                        android:text="@string/text_dukung"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radioValid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_valid"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:layout_weight="1"
                        android:text="@string/text_tolak"
                        android:textStyle="bold" />

                </RadioGroup>

            <EditText
                android:id="@+id/dukungan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dot"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="150"
                android:textAlignment="center" />

            <Button
                android:id="@+id/buttonDukungan"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_submit" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>