<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="41dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccentSoft"
                android:contentDescription="@string/app_name"
                android:fontFamily="sans-serif-condensed-medium"
                android:scaleType="center"
                android:text="@string/text_tentangApps"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgAbtLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@color/colorAccentLight"
                    app:srcCompat="@drawable/ic_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccentLight"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccentLight"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/text_tentangAppsIsi"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/linkUserManual"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccentLight"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/link_usermanual"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/text_apaItu"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccentLight"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/text_apaItuIsi"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/aboutLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccentLight"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/LinkModul"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="15sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/text_termsofuse"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccentLight"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/text_termsofuseIsi"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="15sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/text_privacypolicy"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccentLight"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/text_privacypolicyIsi"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="15sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/text_copyright"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccentLight"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/text_copyrightIsi"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/linkEmailDeveloper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccentLight"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/text_emaildeveloper"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imgAbtItenas"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccentLight"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccentLight"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/text_ITENAS"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>